--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,9 +37,9 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/editText"
+            android:id="@+id/EDUsuario"
             android:layout_gravity="center_horizontal"
-            android:hint="usuario" />
+            android:hint="Usuario" />
 
         <TextView
             android:layout_width="match_parent"
@@ -50,21 +50,28 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/editText2"
+            android:id="@+id/EDContraseña"
             android:layout_gravity="center_horizontal"
-            android:hint="contraseña" />
+            android:hint="Contraseña" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/textView4" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView7"
+            android:layout_gravity="center_horizontal" />
+
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Acceder"
-            android:id="@+id/button"
-            android:layout_gravity="right" />
+            android:id="@+id/BotonAcceder"
+            android:layout_gravity="right"
+            android:onClick="OnClickAcceder" />
 
         <TextView
             android:layout_width="wrap_content"
