--- a/app/src/main/res/layout/fragment_main_activity2.xml
+++ b/app/src/main/res/layout/fragment_main_activity2.xml
@@ -9,4 +9,12 @@
     <TextView android:id="@+id/section_label" android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/pruebauser"
+        android:layout_below="@+id/section_label"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
