--- a/app/src/main/res/layout/activity_crear.xml
+++ b/app/src/main/res/layout/activity_crear.xml
@@ -9,7 +9,7 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="left|center_vertical">
+        android:paddingTop="15dp">
 
         <LinearLayout
             android:orientation="horizontal"
